feat: mypage/review 마크업, 데이터연동

--- a/public/mypage_profile.html
+++ b/public/mypage_profile.html
@@ -18,8 +18,8 @@
       <div class="main-nav">
         <h1>마이페이지</h1>
         <div>
-          <div class="nav-user nav-active">회원정보</div>
-          <div class="nav-review">작성한 리뷰</div>
+          <div class="nav-user nav-active"><a href="/mypage/profile">회원정보</a></div>
+          <div class="nav-review"><a href="/mypage/review">작성한 리뷰</a></div>
         </div>
       </div>
       <section class="user-wrap">
