--- a/public/main.html
+++ b/public/main.html
@@ -8,6 +8,7 @@
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/webcomponent.css" rel="stylesheet">
   <link href="/styles/main.css" rel="stylesheet">
+  <link rel="icon" href="/styles/images/favicon.svg">
   <!-- SWIPER 외부 라이브러리 연결-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
