--- a/public/mypage_review.html
+++ b/public/mypage_review.html
@@ -30,47 +30,47 @@
               <h1>{{review.Corp_name}}</h1>
               <div class="review_main">
                 <div class="review_star">
-                  <p>{{review.avg_total}}</p>
+                  <p>{{review.total}}</p>
                   <div class="btn_star_detail">
                     <div class="star_bg">
-                      <span style="width: {{review.avg_total*20}}%"></span>
+                      <span style="width: {{review.total*20}}%"></span>
                     </div>
                     <button type="button" class="star_detail_open" onclick="star_detailClick(this)"></button>
                   </div>
                   <div class="star_detail" style="display: none;">
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_growth*20}}%"></span>
+                        <span style="width: {{review.growth*20}}%"></span>
                       </div>
                       <p>성장 가능성</p>
                     </div>
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_leadership*20}}%"></span>
+                        <span style="width: {{review.leadership*20}}%"></span>
                       </div>
                       <p>리더십</p>
                     </div>
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_reward*20}}%"></span>
+                        <span style="width: {{review.reward*20}}%"></span>
                       </div>
                       <p>급여 및 복지</p>
                     </div>
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_worth*20}}%"></span>
+                        <span style="width: {{review.worth*20}}%"></span>
                       </div>
                       <p>일 가치감</p>
                     </div>
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_culture*20}}%"></span>
+                        <span style="width: {{review.culture*20}}%"></span>
                       </div>
                       <p>사내 문화</p>
                     </div>
                     <div>
                       <div class="star_bg">
-                        <span style="width: {{review.avg_worklife*20}}%"></span>
+                        <span style="width: {{review.worklife*20}}%"></span>
                       </div>
                       <p>워라밸</p>
                     </div>
@@ -127,7 +127,7 @@
                   </button>  
                 </div>
               </div>
-              <button type="button" class="review-change">수정하기</button>
+              <button type="button" class="review-change" onclick="reviewEdit({{review.Review_no}})">수정하기</button>
             </li>
             {% endfor %}
           </ul>
