--- a/public/signup.html
+++ b/public/signup.html
@@ -13,7 +13,9 @@
         <div class="signin_container">
             <header>
                 <div class = "area_logo">
-                    <div class="logo"></div>
+                    <a href="/">
+                        <div class="logo"></div>
+                    </a>
                     회원가입
                 </div>
             </header>
