--- a/public/write_search.html
+++ b/public/write_search.html
@@ -16,6 +16,7 @@
 			</div>
       <main>
 				<div class="main_wrap">
+					<h1>리뷰를 남기실 기관을 검색해주세요.</h1>
 					<form id="search_corp" class="search" method="get" action="/review/write/corp/:name">
 						<div class="user_input">
 							<input type ="text" id="search_input" placeholder="기관명을 입력해주세요." autocomplete="off">
