메타태그 삽입

--- a/public/write_search.html
+++ b/public/write_search.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:title" content="NeedU"/>
+		<meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
+		<meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/88a39d5e-ee8d-4000-855c-a447f7dc965f"/>
 		<title>리뷰작성</title>
 		<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
 		<link href="/styles/webcomponent.css" rel="stylesheet">
