feat: 파비콘, og태그 추가

--- a/public/signup.html
+++ b/public/signup.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
+		<meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/39be237d-699c-42fc-aa1b-8b3e4fe22cfe"/>
+		<link rel="icon" href="/styles/images/favicon.svg">
         <title>회원가입</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="./styles/style_reset.css">
