--- a/public/main.html
+++ b/public/main.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>기관검색</title>
+  <meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
+  <meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/39be237d-699c-42fc-aa1b-8b3e4fe22cfe"/>
+  <link rel="icon" href="/styles/images/favicon.svg">
+  <title>NeedU</title>
   <link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/webcomponent.css" rel="stylesheet">
   <link href="/styles/main.css" rel="stylesheet">
-  <link rel="icon" href="/styles/images/favicon.svg">
   <!-- SWIPER 외부 라이브러리 연결-->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
