--- a/public/review_detail.html
+++ b/public/review_detail.html
@@ -4,7 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>review</title>
+	<meta property="og:description" content="사회복지기관 리뷰 서비스 NeedU"/>
+	<meta property="og:image" content="https://github.com/Code-KHJ/Needu/assets/124508326/39be237d-699c-42fc-aa1b-8b3e4fe22cfe"/>
+	<link rel="icon" href="/styles/images/favicon.svg">
+	<title>기관리뷰</title>
 	<link href="/styles/style_reset.css" rel="stylesheet" type="text/css">
 	<link href="/styles/webcomponent.css" rel="stylesheet">
 	<link href="/styles/review_detail.css" rel="stylesheet" type="text/css">
